--- a/app/views/collections/_form.html.erb
+++ b/app/views/collections/_form.html.erb
@@ -6,7 +6,7 @@
 </div>
 <div class="uk-margin">
 <label class="<%= new ? nil : 'disabled' %>"><%= f.check_box(:needs_platform, class: 'coll-form uk-checkbox search-checkbox', disabled: !new) %> Require platform and format*</label>
-<p class="small">*Games in such collection need to have defined platform and format (physical/digital)</p>
+<p class="small">*Games need to have defined platform and format (physical/digital)</p>
 </div>
 <%= f.submit((new ? 'Create' : 'Update'), class: "uk-button uk-button-default") %>
 <% end %>
