--- a/app/views/static_pages/_search_page.html.erb
+++ b/app/views/static_pages/_search_page.html.erb
@@ -3,3 +3,4 @@
     <%= render partial: 'search_history' %>
 <% end %>
 <%= content_tag :div, nil, id: 'search-wait' %>
+<%= render partial: 'layouts/s_toolbar' %>
