--- a/app/assets/stylesheets/panels.scss
+++ b/app/assets/stylesheets/panels.scss
@@ -88,13 +88,27 @@
 }
 
 .my-search.left-no-p {
+    // ! ! ! ! ! ! !
     // margin-left: 23px;
-    margin-left: 14px;
+    // margin-left: 14px;
+    margin-left: 22px;
 }
 
 .my-search.left-p {
+    // ! ! ! ! ! ! !
     // margin-left: 11px;
-    margin-left: -5px;
+    // margin-left: -5px;
+       margin-left: 11px;
+}
+
+.sort-links {
+    // ! ! ! ! ! ! !
+    // margin-left: -16px;
+    margin-left: 4px;
+
+    margin-bottom: 40px;
+    text-align: center;
+    font-weight: 300;
 }
 
 .srch-div {
@@ -104,13 +118,6 @@
     width: 0px;
     height: 14px;
     margin: 0px 20px;
-}
-
-.sort-links {
-    margin-bottom: 40px;
-    margin-left: -16px;
-    text-align: center;
-    font-weight: 300;
 }
 
 .sort-icon {
