--- a/app/views/search/_panel_view.html.erb
+++ b/app/views/search/_panel_view.html.erb
@@ -18,10 +18,10 @@
                 <%= content_tag(:span, "(#{ Time.at(game[:first_release_date]).year })", class: 'g-year') if game[:first_release_date] %>
                 </h4>
                 <%= content_tag(:p, 'by ' + game[:developers].join(', '), class: 'g-by') if game[:developers] %>
-
                 <% if game[:addl] %>
-                    <%= content_tag :div, nil, class: 'p-addl-spacer' %>
-                    <%= content_tag :div, game[:addl], class: 'p-addl' %>
+                    <% addl_class = addl_hidden? ? 'hidden' : '' %>
+                    <%= content_tag :div, nil, class: "p-addl-spacer xif #{ addl_class }" %>
+                    <%= content_tag :div, game[:addl], class: "p-addl xif #{ addl_class }" %>
                 <% end %>
         <% end %>
         <%= content_tag :div, id: "gr-#{ x_id }", class: 'g-right-add' do %>
