--- a/app/views/collections/_show.js.erb
+++ b/app/views/collections/_show.js.erb
@@ -34,6 +34,7 @@ showHideToolbar();
 modifyToolbar(view);
 toggleEditMenu();
 changeMyView();
+changeTheme();
 
 if (no_games) {
     disableSortLinks();
