--- a/app/views/layouts/_s_toolbar.html.erb
+++ b/app/views/layouts/_s_toolbar.html.erb
@@ -1,12 +1,19 @@
 <%= content_tag :div, id: 'toolbar', class: "waiting #{ tb_open? }" do %>
-  <%= content_tag :a, nil, id: 'tool-show', class: tb_open?, 'uk-icon': 'chevron-left' %>
-  <ul>
-    <li><%= content_tag :a, nil, id: 'cover_view', class: 'change-s-view', 'uk-icon': 'thumbnails' %></li>
-    <li><%= content_tag :a, nil, id: 'panel_view', class: 'change-s-view', 'uk-icon': 'list' %></li>
-    <li><%= content_tag :a, nil, id: 'list_view', class: 'change-s-view', 'uk-icon': 'table' %></li>
-    <li class="hidden"><%= content_tag :a, nil, id: 'close-panels', 'uk-icon': 'shrink' %></li>
-    <% addl_change = addl_hidden? ? 'active' : '' %>
-    <li class="hidden"><%= content_tag :a, nil, id: 'addl-hide', class: addl_change, 'uk-icon': 'close' %></li>
-    <li><%= content_tag :a, nil, id: 'tool-hide', 'uk-icon': 'chevron-right' %></li>
-  </ul>
+<%= content_tag :a, nil, id: 'tool-show', class: tb_open?, 'uk-icon': 'chevron-left' %>
+<ul>
+  <li><%= content_tag :a, svg('chart'), id: 'chart', class: 'uk-icon' %></li>
+  <li>
+    <% change = current_theme == 'theme_dark' ? ['sun', ' sun'] : ['moon', ''] %>
+    <%= content_tag :a, svg(change[0]), id: 'change-theme', class: 'uk-icon' + change[1] %>
+  </li>
+  <hr>
+  <li><%= content_tag :a, nil, id: 'cover_view', class: 'change-s-view', 'uk-icon': 'thumbnails' %></li>
+  <li><%= content_tag :a, nil, id: 'panel_view', class: 'change-s-view', 'uk-icon': 'list' %></li>
+  <li><%= content_tag :a, nil, id: 'list_view', class: 'change-s-view', 'uk-icon': 'table' %></li>
+  <li class="hidden"><%= content_tag :a, nil, id: 'close-panels', 'uk-icon': 'shrink' %></li>
+  <% addl_change = addl_hidden? ? 'active' : '' %>
+  <li class="hidden"><%= content_tag :a, nil, id: 'addl-hide', class: addl_change, 'uk-icon': 'close' %></li>
+  <hr>
+  <li><%= content_tag :a, nil, id: 'tool-hide', 'uk-icon': 'chevron-right' %></li>
+</ul>
 <% end %>
