--- a/app/views/layouts/_s_toolbar.html.erb
+++ b/app/views/layouts/_s_toolbar.html.erb
@@ -3,8 +3,7 @@
 <ul>
   <li><%= content_tag :a, svg('chart'), id: 'chart', class: 'uk-icon' %></li>
   <li>
-    <% change = current_theme == 'theme_dark' ? ['sun', ' sun'] : ['moon', ''] %>
-    <%= content_tag :a, svg(change[0]), id: 'change-theme', class: 'uk-icon' + change[1] %>
+  <%= content_tag :a, svg('dark'), id: 'change-theme', class: "uk-icon #{ current_theme == 'theme_dark' ? 'active' : '' }"  %>
   </li>
   <hr>
   <li><%= content_tag :a, nil, id: 'cover_view', class: 'change-s-view', 'uk-icon': 'thumbnails' %></li>
