--- a/app/views/static_pages/_search_history.html.erb
+++ b/app/views/static_pages/_search_history.html.erb
@@ -1,5 +1,6 @@
+<% if @records.present? %>
 <div id="search-history">
 <span class="clock" uk-icon='icon: clock; ratio: 1.4;'></span><span class="title">Search History</span>
   <%= render @records %>
 </div>
-
+<% end %>
