Start working on dark theme colors.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -83,7 +83,7 @@ $disabled: #b4b4b4;
     }
 }
 
-#logout, #settings, #social {
+.nav-icon {
     position: absolute;
     top: 20px;
     color: $light_grey;
