Add more styling for dark theme.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -399,6 +399,7 @@ a.uk-notification-close {
     color: $light_grey;
     padding: 10px 0px 10px 20px;
     display: inline-block;
+    border-color: $dark_accent;
     transition: all 0.3s ease-in-out;
 }
 
