--- a/app/views/collections/create.js.erb
+++ b/app/views/collections/create.js.erb
@@ -1,5 +1,5 @@
 var active_el_id = $('li.active').attr('id');
-UIkit.modal($('#create-coll-modal')).hide();
+UIkit.modal($('#coll-modal')).hide();
 $(".side-menu").replaceWith("<%= j(render partial: 'layouts/menu') %>");
 $('#' + active_el_id).addClass('active');
 custom_data_confirm();
