--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
     <%= stylesheet_link_tag 'application', media: 'all' %>
     <%= stylesheet_link_tag "#{current_theme}", id: 'theme-control', media: 'all' %>
     <%= javascript_include_tag 'application' %>
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
   </head>
   <body>
     <%= render 'layouts/menu' %>
@@ -23,5 +24,12 @@
       </div>
     <%= render 'layouts/footer' %>
     </div>
-</body>
+    <div id="f-modal" uk-modal>
+        <div class="uk-modal-dialog uk-modal-body uk-margin-auto-vertical">
+            <div class="modal-content">
+                <span class="loading">Loading</span>
+            </div>
+        </div>
+    </div>
+  </body>
 </html>
