--- a/app/views/charts/graphs.js.erb
+++ b/app/views/charts/graphs.js.erb
@@ -1,1 +1,1 @@
-$('#graphs').html("<%= j(render partial: 'graphs', locals: { data: @data }) %>");
+$('#graphs').html("<%= j(render partial: 'graphs', locals: { data: @data, needs_platform: @needs_platform }) %>");
