--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
     <%= stylesheet_link_tag 'application', media: 'all' %>
     <%= stylesheet_link_tag "#{current_theme}", id: 'theme-control', media: 'all' %>
     <%= javascript_include_tag 'application' %>
-    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <%= javascript_include_tag 'https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@0.7.0' %>
   </head>
   <body>
     <%= render 'layouts/menu' %>
